force-app/main/default/objects/Document_BFI__c/Document_BFI__c.object-meta.xml
<CustomObject>
    <label>Document BFI</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents BFI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>