force-app/main/default/objects/Document_BFI__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>Loan__r.Application__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application</label>
    <type>Text</type>
</CustomField>