force-app/main/default/objects/Document_BFI__c/fields/DMS_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Doc_Id__c</fullName>
    <externalId>true</externalId>
    <label>DMS Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>