force-app/main/default/objects/Document_BFI__c/fields/Document_Check_Sesuai__c.field-meta.xml
<CustomField>
    <fullName>Document_Check_Sesuai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Check Sesuai</label>
    <type>Checkbox</type>
</CustomField>