force-app/main/default/objects/Document_BFI__c/fields/Document_Check_Sesuai_CCO__c.field-meta.xml
<CustomField>
    <fullName>Document_Check_Sesuai_CCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Check Sesuai CCO</label>
    <type>Checkbox</type>
</CustomField>