force-app/main/default/objects/Document_BFI__c/fields/Document_Check_Sesuai_CCO_Text__c.field-meta.xml
<CustomField>
    <fullName>Document_Check_Sesuai_CCO_Text__c</fullName>
    <formula>IF( Document_Check_Sesuai_CCO__c == FALSE &amp;&amp; ISBLANK(Document_Notes_CCO__c) == TRUE, &quot;&quot;, IF( Document_Check_Sesuai_CCO__c == TRUE, &quot;Sesuai&quot;, &quot;Tidak Sesuai&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Check</label>
    <type>Text</type>
</CustomField>