force-app/main/default/objects/Document_BFI__c/fields/Document_Group__c.field-meta.xml
<CustomField>
    <fullName>Document_Group__c</fullName>
    <label>Document Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>