force-app/main/default/objects/Document_BFI__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <label>Document No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>