force-app/main/default/objects/Document_BFI__c/fields/Document_Notes_CCO__c.field-meta.xml
<CustomField>
    <fullName>Document_Notes_CCO__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>