force-app/main/default/objects/Document_BFI__c/fields/Document_Receive_by_CCO__c.field-meta.xml
<CustomField>
    <fullName>Document_Receive_by_CCO__c</fullName>
    <label>Document Receive by CCO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>