force-app/main/default/objects/Document_BFI__c/fields/Document_Receive_by_CCO_New__c.field-meta.xml
<CustomField>
    <fullName>Document_Receive_by_CCO_New__c</fullName>
    <label>Document Receive by CCO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>