force-app/main/default/objects/Document_BFI__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD/ ART</fullName>
            </value>
            <value>
                <fullName>Akta</fullName>
            </value>
            <value>
                <fullName>NPWP</fullName>
            </value>
            <value>
                <fullName>PBB</fullName>
            </value>
            <value>
                <fullName>SITU</fullName>
            </value>
            <value>
                <fullName>SIUP</fullName>
            </value>
            <value>
                <fullName>TDP</fullName>
            </value>
            <value>
                <fullName>SKD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>