force-app/main/default/objects/Document_BFI__c/fields/Document_Verified_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Verified_URL__c</fullName>
    <label>Document Verified URL</label>
    <type>Url</type>
</CustomField>