force-app/main/default/objects/Document_BFI__c/fields/Edit_Operation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Edit_Operation_Notes__c</fullName>
    <formula>IF(
    (
        ISBLANK( DMS_Doc_Id__c )|| 
        !$Permission.Sec_Operation_DocCheck_CCO_Edit
    ),
    &quot;&quot;,
    IF(
        !Document_Check_Sesuai__c || 
        $Permission.Sec_Operation_DocCheck_CCO_Edit || 
        CONTAINS(Document_Group__c, &quot;FKD&quot;),
        HYPERLINK(
            &quot;/lightning/action/quick/Document_BFI__c.Edit_Notes&quot; &amp;
            &quot;?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot; &amp; CASESAFEID(Id) &amp;
            &quot;&amp;backgroundContext=%2Flightning%2Fr%2FOperation__c%2F&quot; &amp; Loan__r.Operation__c &amp; &quot;%2Fview&amp;retUrl=&quot;,
            &quot;Edit&quot;,
            &quot;_self&quot;
        ),
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>