force-app/main/default/objects/Document_BFI__c/fields/Is_Need_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Is_Need_Document_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Need Document No</label>
    <type>Checkbox</type>
</CustomField>