force-app/main/default/objects/Document_BFI__c/fields/Is_Verified_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verified Needed</label>
    <type>Checkbox</type>
</CustomField>