force-app/main/default/objects/Document_BFI__c/fields/Last_Update_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Document_URL__c</fullName>
    <label>Last Update Document URL</label>
    <type>DateTime</type>
</CustomField>