force-app/main/default/objects/Document_BFI__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leаd</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Documents BFI</relationshipLabel>
    <relationshipName>Documents_BFI</relationshipName>
    <type>Lookup</type>
</CustomField>