force-app/main/default/objects/Document_BFI__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <description>To be filled with ID from any objects</description>
    <label>Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>