force-app/main/default/objects/Document_BFI__c/fields/Upload_Link_Lead__c.field-meta.xml
<CustomField>
    <fullName>Upload_Link_Lead__c</fullName>
    <formula>IF( CONTAINS(Loan__r.Loan_Status__c, &quot;Cancel&quot;)  || CONTAINS(Loan__r.Loan_Status__c, &quot;Golive&quot;), &quot;&quot;, HYPERLINK(&quot;/lightning/action/quick/Document_BFI__c.Upload_Document?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot; &amp; CASESAFEID(Id) &amp; &quot;&amp;backgroundContext=%2Flightning%2Fr%2FApplication__c%2F&quot; &amp; Lead__c &amp; &quot;%2Fview&amp;retUrl=&quot;, &quot;Upload File&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload Link</label>
    <type>Text</type>
</CustomField>