force-app/main/default/objects/Document_BFI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Is_Template__c</columns>
    <columns>Template_Type__c</columns>
    <columns>NAME</columns>
    <columns>Document_Group__c</columns>
    <columns>Document_Type_Lookup__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Is_Verified_Needed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Seq_No__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Need_Document_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Document_BFI__c.General</value>
    </filters>
    <label>All</label>
</ListView>