force-app/main/default/objects/Document_BFI__c/listViews/View_By_Loan_Id.listView-meta.xml
<ListView>
    <fullName>View_By_Loan_Id</fullName>
    <columns>NAME</columns>
    <columns>Document_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan__c</field>
        <operation>equals</operation>
        <value>Auto Miss Alicia Bogan</value>
    </filters>
    <filters>
        <field>Document_Group__c</field>
        <operation>contains</operation>
        <value>akad</value>
    </filters>
    <label>View By Loan Id</label>
</ListView>